<resources>
    <string name="app_name">Star SteadyLAN Setting Labs V0.1.0</string>
    <string name="list_star_printer">List - Star Printer</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="steadylan">SteadyLAN :</string>
    <string name="apply">Apply</string>
    <string name="read_setting">Read Setting</string>
    <string name="star_printer_is_not_found_please_tap_on_the_search_button">Star Printer is not found.</string>
</resources>
