<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchPrinterListLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/starPrinterList_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:text="@string/list_star_printer"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/searchPrinter_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"
                android:text="@string/search" />

        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_below="@id/searchPrinterListLayout"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightgrey" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_below="@id/separator"
            android:text="@string/star_printer_is_not_found_please_tap_on_the_search_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:gravity="center"/>


        <LinearLayout
            android:id="@+id/searchedPrinterlistViewLayout"
            android:layout_below="@id/separator"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/searchPrinterList_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">
            </ListView>


        </LinearLayout>

        <View
            android:id="@+id/separator2"
            android:layout_below="@id/searchedPrinterlistViewLayout"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:id="@+id/settingTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingLayout"
            android:layout_below="@id/settingTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/remoteConfig_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/steadylan" />

            <Spinner
                android:id="@+id/steadyLANSetting_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="end"
                android:entries="@array/spinner_values" />
        </LinearLayout>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settingLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/apply" />

        <Button
            android:id="@+id/readSetting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/apply_button"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/read_setting" />

    </RelativeLayout>




</ScrollView>